--- a/CordovaAppRequireJS/www/views/welcome.html
+++ b/CordovaAppRequireJS/www/views/welcome.html
@@ -16,6 +16,9 @@
         <p class="help-block">${fullName | upper}</p>
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
+
+        <button type="button" click.delegate="goToWinJs()" class="btn btn-default">GoToWinJs</button>
+
     </form>
   </section>
 </template>
